--- a/PI_AxelSchemberg/angular.json
+++ b/PI_AxelSchemberg/angular.json
@@ -23,9 +23,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "SchembergAxel_PI/PI_AxelSchemberg/node_modules/bootstrap/dist/css/bootstrap.css"
             ],
-            "scripts": []
+            "scripts": [
+              "SchembergAxel_PI/PI_AxelSchemberg/node_modules/bootstrap/dist/js/bootstrap.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -97,5 +100,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "dd8f35dd-5f3a-4c4b-9691-cc71dcf0fa17"
   }
 }
